--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dleclerc <dleclerc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/08 09:56:45 by dleclerc          #+#    #+#              #
-#    Updated: 2024/12/10 11:50:14 by dleclerc         ###   ########.fr        #
+#    Updated: 2024/12/11 13:26:29 by dleclerc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,172 +15,155 @@ ifndef VERBOSE
 .SILENT:
 endif
 
-# Color
-DEFAULT		=	\033[0;39m
-GRAY		=	\033[0;90m
-RED			=	\033[0;91m
-GREEN		=	\033[0;92m
-YELLOW		=	\033[0;93m
-BLUE		=	\033[0;94m
-MAGENTA		=	\033[0;95m
-CYAN		=	\033[0;96m
-WHITE 		=	\033[0;97m
 
-# Variables
+
+#-Color--------------#
+DEFAULT	=	\033[0;39m
+GRAY	=	\033[0;90m
+RED		=	\033[0;91m
+GREEN	=	\033[0;92m
+YELLOW	=	\033[0;93m
+BLUE	=	\033[0;94m
+MAGENTA	=	\033[0;95m
+CYAN	=	\033[0;96m
+WHITE 	=	\033[0;97m
+
+
+
+#-Variable-----------------------------#
 PRINTF		=	printf
 CFLAGS		=	-Wall -Wextra -Werror -g
 RM			=	rm -f
 CC			=	cc
+#-//---------------------------#
 NAME		=	libft.a
-#--------------------#
-OBJ_DIR			=	obj
-OBJ_PF_DIR		=	obfpf
-OBJ_PFFD_DIR	=	obfpffd
-OBJ_GNL_DIR		=	objgnl
-#--------------------#
-SRC_DIR 	=	source
-SRC_PF_DIR 	=	printf_utils
-SRC_PFFD_DIR =	printf_fd_utils
-SRC_GNL_DIR	=	gnl_utils
-#--------------------#
-HEADER		=	gnl_utils/get_next_line.h	\
-				printf_utils/ft_printf.h	\
-				printf_fd_utils/ft_printffd.h
-#--------------------#
+#-//---------------------------#
+SRC_DIR			=	source
+BUILD_DIR		=	object
+#-//---------------------------#
+HEADER		=	source/gnl_dir/get_next_line.h	\
+				source/printf_dir/ft_printf.h	\
+				source/printf_fd_dir/ft_printffd.h
+#-//---------------------------#
 do_clean 	:= 	1
 
-# Source
-SRC			=	ft_strlen.c			\
-				ft_atoi.c			\
-				ft_atol.c			\
-				ft_strlcpy.c		\
-				ft_strlcat.c		\
-				ft_strnstr.c		\
-				ft_memset.c			\
-				ft_memcpy.c			\
-				ft_memmove.c		\
-				ft_bzero.c			\
-				ft_strdup.c			\
-				ft_isalpha.c		\
-				ft_isdigit.c		\
-				ft_isalnum.c		\
-				ft_isascii.c		\
-				ft_isprint.c		\
-				ft_tolower.c		\
-				ft_toupper.c		\
-				ft_strchr.c			\
-				ft_strrchr.c		\
-				ft_strncmp.c		\
-				ft_memchr.c			\
-				ft_memcmp.c			\
-				ft_calloc.c			\
-				ft_itoa.c			\
-				ft_substr.c			\
-				ft_strjoin.c		\
-				ft_putchar_fd.c		\
-				ft_putstr_fd.c		\
-				ft_putendl_fd.c		\
-				ft_putnbr_fd.c		\
-				ft_split.c			\
-				ft_strtrim.c		\
-				ft_strmapi.c		\
-				ft_striteri.c		\
-				ft_lstnew.c			\
-				ft_lstadd_front.c	\
-				ft_lstsize.c		\
-				ft_lstlast.c		\
-				ft_lstadd_back.c	\
-				ft_lstdelone.c		\
-				ft_lstclear.c		\
-				ft_lstiter.c		\
-				ft_lstmap.c			\
-				ft_printf.c			\
-				ft_printf_fd.c	\
-				get_next_line.c
 
-SRC_PF		=	ft_putchar_pf.c	\
-				ft_putstr_pf.c	\
-				ft_putnbrs_pf.c	\
-				ft_puthex_pf.c	\
-				ft_putadress_pf.c
 
-SRC_PFFD	=	ft_putchar_pffd.c	\
-				ft_putstr_pffd.c	\
-				ft_putnbrs_pffd.c	\
-				ft_puthex_pffd.c	\
-				ft_putadress_pffd.c
+#-Source----------------------------------------------#
+SRC			=	source/ft_strlen.c						\
+				source/ft_atoi.c						\
+				source/ft_atol.c						\
+				source/ft_strlcpy.c						\
+				source/ft_strlcat.c						\
+				source/ft_strnstr.c						\
+				source/ft_memset.c						\
+				source/ft_memcpy.c						\
+				source/ft_memmove.c						\
+				source/ft_bzero.c						\
+				source/ft_strdup.c						\
+				source/ft_isalpha.c						\
+				source/ft_isdigit.c						\
+				source/ft_isalnum.c						\
+				source/ft_isascii.c						\
+				source/ft_isprint.c						\
+				source/ft_tolower.c						\
+				source/ft_toupper.c						\
+				source/ft_strchr.c						\
+				source/ft_strrchr.c						\
+				source/ft_strncmp.c						\
+				source/ft_memchr.c						\
+				source/ft_memcmp.c						\
+				source/ft_calloc.c						\
+				source/ft_itoa.c						\
+				source/ft_substr.c						\
+				source/ft_strjoin.c						\
+				source/ft_putchar_fd.c					\
+				source/ft_putstr_fd.c					\
+				source/ft_putendl_fd.c					\
+				source/ft_putnbr_fd.c					\
+				source/ft_split.c						\
+				source/ft_strtrim.c						\
+				source/ft_strmapi.c						\
+				source/ft_striteri.c					\
+				source/ft_lstnew.c						\
+				source/ft_lstadd_front.c				\
+				source/ft_lstsize.c						\
+				source/ft_lstlast.c						\
+				source/ft_lstadd_back.c					\
+				source/ft_lstdelone.c					\
+				source/ft_lstclear.c					\
+				source/ft_lstiter.c						\
+				source/ft_lstmap.c						\
+				source/ft_printf.c						\
+				source/ft_printf_fd.c					\
+				source/get_next_line.c					\
+				source/printf_dir/ft_putchar_pf.c		\
+				source/printf_dir/ft_putstr_pf.c		\
+				source/printf_dir/ft_putnbrs_pf.c		\
+				source/printf_dir/ft_puthex_pf.c		\
+				source/printf_dir/ft_putadress_pf.c		\
+				source/printf_fd_dir/ft_putchar_pffd.c	\
+				source/printf_fd_dir/ft_putstr_pffd.c	\
+				source/printf_fd_dir/ft_putnbrs_pffd.c	\
+				source/printf_fd_dir/ft_puthex_pffd.c	\
+				source/printf_fd_dir/ft_putadress_pffd.c\
+				source/gnl_dir/gnl_fix_for_pipex.c		\
+				source/gnl_dir/get_next_line_utils.c
+#-Object----------------------------------------------#
+OBJ			=	${SRC:$(SRC_DIR)/%.c=$(BUILD_DIR)/%.o}
+DIRS		=	$(sort $(shell dirname $(OBJ)))
 
-SRC_GNL		=	gnl_fix_for_pipex.c	\
-				get_next_line_utils.c
-# Object
-OBJ			=	$(addprefix $(OBJ_DIR)/, $(SRC:.c=.o))
-OBJ_PF		=	$(addprefix $(OBJ_PF_DIR)/, $(SRC_PF:.c=.o))
-OBJ_PFFD	=	$(addprefix $(OBJ_PFFD_DIR)/, $(SRC_PFFD:.c=.o))
-OBJ_GNL		=	$(addprefix $(OBJ_GNL_DIR)/, $(SRC_GNL:.c=.o))
 
-# Progress vars
-SRC_COUNT_TOT := $(shell expr $(shell echo -n $(SRC) | wc -w) - $(shell ls -l $(OBJ_DIR) 2>&1 | grep ".o" | wc -l) + 1)
-ifeq ($(shell test $(SRC_COUNT_TOT) -le 0; echo $$?),0)
-	SRC_COUNT_TOT := $(shell echo -n $(SRC) | wc -w)
-endif
+
+#-Progress-vars-----------------------------------------------------#
+SRC_COUNT_TOT := $(shell echo -n $(SRC) | wc -w)
 SRC_COUNT := 0
 SRC_PCT = $(shell expr 100 \* $(SRC_COUNT) / $(SRC_COUNT_TOT))
 
-all					:	$(NAME)
 
-$(NAME)				:	$(OBJ) $(OBJ_PF) $(OBJ_PFFD) $(OBJ_GNL)
-					$(PRINTF) "\n\n"
-					ar -rc $(NAME) $(OBJ) $(OBJ_PFFD) $(OBJ_PF) $(OBJ_GNL)
-					$(PRINTF) "$(GRAY)libft says: \t\t$(CYAN)$(NAME)$(GREEN) is up to date!\n$(DEFAULT)"
-			
-$(OBJ_DIR)/%.o		:	$(SRC_DIR)/%.c | $(OBJ_DIR)
-					$(eval SRC_COUNT = $(shell expr $(SRC_COUNT) + 1))
-					$(PRINTF) "\r%100s\r$(GRAY)libft says: \t\t$(CYAN)[ %d/%d (%d%%) ] $(BLUE)$<$(DEFAULT)" "" $(SRC_COUNT) $(SRC_COUNT_TOT) $(SRC_PCT)
-					$(CC) $(CFLAGS)  -c $< -o $@
 
-$(OBJ_PF_DIR)/%.o	:	$(SRC_PF_DIR)/%.c | $(OBJ_PF_DIR)
-					$(CC) $(CFLAGS)  -c $< -o $@
+#-Rule-------------------------------------------------------------------------------------------------------------------#
+all				:	$(NAME)
 
-$(OBJ_PFFD_DIR)/%.o	:	$(SRC_PFFD_DIR)/%.c | $(OBJ_PFFD_DIR)
-					$(CC) $(CFLAGS)  -c $< -o $@
+$(NAME)			:	$(OBJ)
+					$(PRINTF) "\n"
+					ar -rc $(NAME) $(OBJ)
+					$(PRINTF) "$(GRAY)\n$(NAME) says: \t\t$(CYAN)$(NAME)$(GREEN) is up to date!\n$(DEFAULT)"
 
-$(OBJ_GNL_DIR)/%.o	:	$(SRC_GNL_DIR)/%.c | $(OBJ_GNL_DIR)
-					$(CC) $(CFLAGS)  -c $< -o $@
+$(BUILD_DIR)/%.o	:	$(SRC_DIR)/%.c | $(DIRS)
+						$(eval SRC_COUNT = $(shell expr $(SRC_COUNT) + 1))
+						$(PRINTF) "\r%100s\r$(GRAY)$(NAME) says: \t\t$(CYAN)[ %d/%d (%d%%) ] $(BLUE)$<$(DEFAULT)" "" $(SRC_COUNT) $(SRC_COUNT_TOT) $(SRC_PCT)
+						$(CC) $(CFLAGS) -c $< -o $@
 
-$(OBJ_DIR)			:
-					mkdir -p $(OBJ_DIR)
+$(DIRS)		:
+					mkdir -p $@
 
-$(OBJ_PF_DIR)		:
-					mkdir -p $(OBJ_PF_DIR)
-
-$(OBJ_PFFD_DIR)		:
-					mkdir -p $(OBJ_PFFD_DIR)
-
-$(OBJ_GNL_DIR)		:
-					mkdir -p $(OBJ_GNL_DIR)
+				
 					
-clean				:
-					$(RM) -r $(OBJ_DIR)
-					$(RM) -r $(OBJ_PF_DIR)
-					$(RM) -r $(OBJ_PFFD_DIR)
-					$(RM) -r $(OBJ_GNL_DIR)			
-					$(PRINTF) "$(GRAY)libft says : \t\t$(YELLOW)_*#*__$(CYAN)Cleaning up object$(YELLOW)__*#*_"
+#-Rule-Cleaning---------------------------------------------------------------------------------------------------------#
+clean			:
+					$(RM) -r $(BUILD_DIR)
+					$(PRINTF) "$(GRAY)$(NAME) says: \t\t$(YELLOW)_*#*__$(CYAN)Cleaning up object$(YELLOW)__*#*_"
 					sleep 0.6
-					$(PRINTF) "\r\r$(GRAY)libft says : \t\t$(YELLOW)_*#*_🧹_*#*_🧹_*#*_*#*_*#*_*#*_"
+					$(PRINTF) "\r\r$(GRAY)$(NAME) says: \t\t$(YELLOW)_*#*_🧹_*#*_🧹_*#*_*#*_*#*_*#*_"
 					sleep 0.3
-					$(PRINTF) "\r\r$(GRAY)libft says : \t\t$(YELLOW)_________*#*_🧹_*#*_🧹_*#*_*#*_"
+					$(PRINTF) "\r\r$(GRAY)$(NAME) says: \t\t$(YELLOW)_________*#*_🧹_*#*_🧹_*#*_*#*_"
 					sleep 0.3
-					$(PRINTF) "\r\r$(GRAY)libft says : \t\t$(YELLOW)_________________*#*_🧹_*#*_🧹_"
+					$(PRINTF) "\r\r$(GRAY)$(NAME) says: \t\t$(YELLOW)_________________*#*_🧹_*#*_🧹_"
 					sleep 0.3
-					$(PRINTF) "\r\r$(GRAY)libft says : \t\t$(YELLOW)____________clean_🧹___________\n\n$(DEFAULT)"
+					$(PRINTF) "\r\r$(GRAY)$(NAME) says: \t\t$(YELLOW)____________clean_🧹___________\n\n$(DEFAULT)"
 					sleep 0.3
-					
-fclean				:
+
+fclean			:	
 					if [ $(do_clean) -eq 1 ]; then  make clean --silent; fi
 					$(RM) $(NAME)
-					$(PRINTF) "$(GRAY)libft says: \t\t$(MAGENTA)🌀 Sending $(CYAN)$(NAME)$(MAGENTA) to the void 🌀\n\n$(DEFAULT)"
+					$(RM) bonus
+					$(PRINTF) "$(GRAY)$(NAME) says: \t\t$(MAGENTA)🌀 Sending $(CYAN)$(NAME)$(MAGENTA) to the void 🌀\n\n$(DEFAULT)"
 					sleep 0.3
 
-re					:	fclean all
+re				:	fclean all
 
-.PHONY				:	all clean fclean re
+
+
+#-PHONY----------------------------------------------------------------------#
+.PHONY			:	all clean fclean re
